--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             </div>
 
                             <div class="col-lg-6 col-12">
-                               <form action="https://formspree.io/f/xrbabkol" method="POST" class="custom-form contact-form" role="form">
+                               <form action="https://formspree.io/f/xdklgoae" method="POST" class="custom-form contact-form" role="form">
   <div class="row">
     <div class="col-lg-6 col-12">
       <label for="name" class="form-label">First Name <sup class="text-danger">*</sup></label>
@@ -543,6 +543,10 @@
 
                                     <li class="social-icon-item">
                                         <a href="https://telegram.me/abdo_shinkada" target="_new" class="social-icon-link bi-telegram">
+                                        </a>
+                                    </li>
+                                    <li class="social-icon-item">
+                                        <a href="https://telegram.me/@abdu1610" target="_new" class="social-icon-link bi-telegram">
                                         </a>
                                     </li>
                                 </ul>
@@ -680,6 +684,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
