--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                                         </a>
                                     </li>
                                     <li class="social-icon-item">
-                                        <a href="https://telegram.me/@abdu1610" target="_new" class="social-icon-link bi-telegram">
+                                        <a href="https://telegram.me/abdu1610" target="_new" class="social-icon-link bi-telegram">
                                         </a>
                                     </li>
                                 </ul>
@@ -684,6 +684,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
