--- a/control.html
+++ b/control.html
@@ -5,117 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Smart Door System — Control</title>
 
-  <!-- Bootstrap 5 (CSS) -->
+  <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
-    :root{
+    :root {
       --bg1:#2c2c2c; --bg2:#1a1a1a;
       --card:#2f2f2f; --list:#3a3a3a; --list-hover:#4a4a4a; --text:#fff;
     }
-    body{
+    body {
       background: linear-gradient(120deg,var(--bg1),var(--bg2));
-      color:var(--text);
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,"Plus Jakarta Sans",Arial,sans-serif;
+      color: var(--text);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
     }
-    h1{
-      text-align:center; font-weight:800; letter-spacing:.05em;
-      margin:40px 0 24px;
+    h1 {
+      text-align: center; font-weight: 800; letter-spacing: .05em;
+      margin: 40px 0 24px;
     }
-    .control-card{
-      background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
+    .control-card {
+      background: var(--card); border: 0; border-radius: 16px; overflow: hidden;
+      box-shadow: 0 10px 30px rgba(0,0,0,.35); margin-bottom: 16px;
     }
-    .btn-toggle{
-      width:100%; text-align:left; padding:16px 20px; font-weight:700; color:#fff;
-      background:transparent; border:0;
+    .btn-toggle {
+      width: 100%; text-align: left; padding: 16px 20px; font-weight: 700; color: #fff;
+      background: transparent; border: 0;
     }
-    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
-    .list-group-dark .list-group-item{
-      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
+    .btn-toggle:hover { background: rgba(255,255,255,.05); }
+    .list-group-dark .list-group-item {
+      background: var(--list); color: #fff; border-color: rgba(255,255,255,.05);
+      cursor: pointer;
     }
-    .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
-    .ms-3{ margin-left:1rem !important; }
-    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
-    button.cmd-btn:hover {text-decoration:underline;}
+    .list-group-dark .list-group-item:hover { background: var(--list-hover); }
+    .ms-3 { margin-left: 1rem !important; }
   </style>
 </head>
 <body>
   <div class="container py-3">
     <h1>SMART DOOR SYSTEM</h1>
 
-    <!-- ========== OPTIONS ========== -->
+    <!-- OPTIONS -->
     <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#sdsOptions"
-              aria-expanded="false" aria-controls="sdsOptions">
+      <button type="button" class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#sdsOptions">
         Smart Door System Options
       </button>
-
       <div id="sdsOptions" class="collapse">
         <ul class="list-group list-group-flush list-group-dark">
 
           <!-- Open Door -->
           <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#openDoorMenu"
-                    aria-expanded="false" aria-controls="openDoorMenu">
+            <button type="button" class="btn-toggle ps-0" data-bs-toggle="collapse" data-bs-target="#openDoorMenu">
               Open Door
             </button>
             <div id="openDoorMenu" class="collapse">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">Open door &amp; close it</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">Open door only</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">Close door only</button></li>
+                <li class="list-group-item action" data-action="open door & close it">Open door & close it</li>
+                <li class="list-group-item action" data-action="open door only">Open door only</li>
+                <li class="list-group-item action" data-action="close door only">Close door only</li>
               </ul>
             </div>
           </li>
 
           <!-- Toggle Camera -->
           <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#cameraMenu"
-                    aria-expanded="false" aria-controls="cameraMenu">
+            <button type="button" class="btn-toggle ps-0" data-bs-toggle="collapse" data-bs-target="#cameraMenu">
               Toggle Camera
             </button>
             <div id="cameraMenu" class="collapse">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start camera')">Start camera</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop camera')">Stop camera</button></li>
+                <li class="list-group-item action" data-action="start camera">Start camera</li>
+                <li class="list-group-item action" data-action="stop camera">Stop camera</li>
               </ul>
             </div>
           </li>
 
           <!-- Toggle of the System -->
           <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#systemMenu"
-                    aria-expanded="false" aria-controls="systemMenu">
+            <button type="button" class="btn-toggle ps-0" data-bs-toggle="collapse" data-bs-target="#systemMenu">
               Toggle of the System
             </button>
             <div id="systemMenu" class="collapse">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_loc')">Lock system</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_unloc')">Unlock system</button></li>
+                <li class="list-group-item action" data-action="lock system">Lock system</li>
+                <li class="list-group-item action" data-action="unlock system">Unlock system</li>
               </ul>
             </div>
           </li>
 
           <!-- Penalty Activate -->
           <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#penaltyMenu"
-                    aria-expanded="false" aria-controls="penaltyMenu">
+            <button type="button" class="btn-toggle ps-0" data-bs-toggle="collapse" data-bs-target="#penaltyMenu">
               Penalty Activate
             </button>
             <div id="penaltyMenu" class="collapse">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen')">The system penalty</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen30')">Extended to 30 seconds</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen60')">Extended to 1 minutes</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzcof')">Penalty with coffin dance buzzer</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzpoc')">Penalty with pirates of the Caribbean</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzztok')">Penalty with tokyo</button></li>
+                <li class="list-group-item action" data-action="the system penalty">haha</li>
+                <li class="list-group-item action" data-action="extended to 30 seconds">hehe</li>
+                <li class="list-group-item action" data-action="extended to 1 minutes">wow</li>
+                <li class="list-group-item action" data-action="penalty with tokyo">wddd</li>
               </ul>
             </div>
           </li>
@@ -124,59 +110,66 @@
       </div>
     </div>
 
-    <!-- ========== ADD-ON OPTIONS ========== -->
+    <!-- ADD-ON OPTIONS -->
     <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#addonOptions"
-              aria-expanded="false" aria-controls="addonOptions">
+      <button type="button" class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#addonOptions">
         Smart Door System Add-on Options
       </button>
       <div id="addonOptions" class="collapse">
         <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('tkinter color chart')">Tkinter color chart</button></li>
+          <li class="list-group-item action" data-action="tkinter color chart">Tkinter color chart</li>
         </ul>
       </div>
     </div>
 
-    <!-- ========== EXPLANATION ========== -->
+    <!-- EXPLANATION -->
     <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#explain"
-              aria-expanded="false" aria-controls="explain">
+      <button type="button" class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#explain">
         Smart Door System Explanation
       </button>
       <div id="explain" class="collapse">
         <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('arduino components')">Arduino components</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('python components')">Python components</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('arduino libraries')">Arduino libraries</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('python libraries')">Python libraries</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('explain the arduino code')">Explain the Arduino code</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('explain the python code')">Explain the Python code</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('version 1.0')">Version 1.0</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('version 2.0')">Version 2.0</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('version 3.0')">Version 3.0</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('dt-06 wifi configuration')">DT-06 wifi configuration</button></li>
-          <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('the face recognition')">The face recognition</button></li>
+          <li class="list-group-item">dd → 66</li>
+          <li class="list-group-item">ss → i</li>
+          <li class="list-group-item">aa → d4</li>
+          <li class="list-group-item">ee → c8</li>
+          <li class="list-group-item">qq → x8</li>
         </ul>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap 5 (JS) -->
+  <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Telegram Script -->
   <script>
-    function sendCommand(cmd) {
-      fetch("http://127.0.0.1:5000/command", {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({cmd: cmd})
-      })
-      .then(res => res.json())
-      .then(data => console.log("Response:", data))
-      .catch(err => console.error("Error:", err));
+    const BOT_TOKEN = "8325912903:AAHYb-xLVI-JXWl3dc6_P8x2WwpqA_siA3g";
+    const PRIVATE_CHAT_ID = "1399615425";
+
+    async function sendToBot(action){
+      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
+      const data = { chat_id: PRIVATE_CHAT_ID, text: action };
+      try{
+        const res = await fetch(url, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        });
+        if(res.ok){
+          console.log("Sent:", action);
+        }else{
+          console.error("Failed:", res.status);
+        }
+      }catch(err){
+        console.error("Error:", err.message);
+      }
     }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll(".action[data-action]")
+        .forEach(el => el.addEventListener("click", () => sendToBot(el.dataset.action)));
+    });
   </script>
 </body>
 </html>
