--- a/control.html
+++ b/control.html
@@ -23,7 +23,7 @@
         <div class="card">
             <div class="card-header bg-secondary text-white">Smart Door System Options</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><button onclick="sendToBot('open door & close it')">Open Door & Close It</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('OPEN_DOOR')">Open Door & Close It</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('open door only')">Open Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('close door only')">Close Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('start camera')">Start Camera</button></li>
@@ -91,4 +91,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
