--- a/control.html
+++ b/control.html
@@ -23,9 +23,9 @@
         <div class="card">
             <div class="card-header bg-secondary text-white">Smart Door System Options</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><button onclick="sendToBot('OPEN_DOOR')">Open Door & Close It</button></li>
-                <li class="list-group-item"><button onclick="sendToBot('open door only')">Open Door Only</button></li>
-                <li class="list-group-item"><button onclick="sendToBot('close door only')">Close Door Only</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('normal_door')">Open Door & Close It</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('door_openn')">Open Door Only</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('door_closee')">Close Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('start camera')">Start Camera</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('stop camera')">Stop Camera</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('unlock system')">Unlock System</button></li>
@@ -91,6 +91,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
