--- a/control.html
+++ b/control.html
@@ -69,7 +69,8 @@
     <!-- Telegram Bot Script -->
     <script>
         const BOT_TOKEN = "8325912903:AAHYb-xLVI-JXWl3dc6_P8x2WwpqA_siA3g";
-        const CHAT_ID = "1399615425";
+        const PRIVATE_CHAT_ID = "1399615425";
+        
 
         function sendToBot(command) {
             fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
@@ -91,6 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
