--- a/control.html
+++ b/control.html
@@ -77,7 +77,7 @@
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    chat_id: CHAT_ID,
+                    chat_id: PRIVATE_CHAT_ID,
                     text: command
                 })
             }).then(res => {
@@ -92,6 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
