--- a/control.html
+++ b/control.html
@@ -23,7 +23,7 @@
         <div class="card">
             <div class="card-header bg-secondary text-white">Smart Door System Options</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><button onclick="sendToBot('Open Door & Close It')">Open Door & Close It</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('door_openn')">Open Door & Close It</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('Open Door Only')">Open Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('door_closee')">Close Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('start camera')">Start Camera</button></li>
@@ -92,6 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
