--- a/control.html
+++ b/control.html
@@ -72,7 +72,8 @@
         const PRIVATE_CHAT_ID = "1399615425";
 
         function sendToBot(command) {
-            fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+           fetch(`https://api.telegram.org/bot${BOT_TOKEN_WEB}/sendMessage`, {
+
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
@@ -91,4 +92,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
