--- a/control.html
+++ b/control.html
@@ -135,7 +135,7 @@
       </button>
       <div id="addonOptions" class="collapse">
         <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><a href="downloads/tkinter_colors.png" download>TKinter Color Chart</a></li>
+          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
         </ul>
       </div>
     </div>
@@ -208,3 +208,4 @@
   </script>
 </body>
 </html>
+
