--- a/control.html
+++ b/control.html
@@ -65,9 +65,9 @@
             </button>
             <div id="openDoorMenu" class="collapse" data-bs-parent="#sdsOptions">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('normal_door')">Open Door & Close It</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('door_openn')">Open door only</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('door_closee')">Close door only</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('open door & close it')">Open Door & Close It</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('open door only')">Open door only</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('close door only')">Close door only</button></li>
               </ul>
             </div>
           </li>
@@ -96,8 +96,8 @@
             </button>
             <div id="systemMenu" class="collapse" data-bs-parent="#sdsOptions">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_loc')">Lock system</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_unloc')">Unlock system</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('lock system')">Lock system</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('unlock system')">Unlock system</button></li>
               </ul>
             </div>
           </li>
@@ -111,12 +111,12 @@
             </button>
             <div id="penaltyMenu" class="collapse" data-bs-parent="#sdsOptions">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_pen')">The system penalty</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_pen30')">Extended to 30 seconds</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_pen60')">Extended to 1 minutes</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_buzzcof')">Penalty with coffin dance buzzer</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_buzzpoc')">Penalty with pirates of the Caribbean</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('sys_buzztok')">Penalty with tokyo</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('the system penalty')">The system penalty</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('extended to 30 seconds')">Extended to 30 seconds</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('extended to 1 minutes')">Extended to 1 minutes</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('penalty with coffin dance buzzer')">Penalty with coffin dance buzzer</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('penalty with pirates of the caribbean')">Penalty with pirates of the Caribbean</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendToBot('penalty with tokyo')">Penalty with tokyo</button></li>
               </ul>
             </div>
           </li>
@@ -208,4 +208,5 @@
   </script>
 </body>
 </html>
+
 
