--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     Our Story
                                 </a>
 
-                                <a class="btn custom-btn smoothscroll me-2 mb-2" href="#section_3"><strong>The System Compnents</strong></a>
+                                <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>management</strong></a>
                             </div>
 
                         </div>
@@ -684,6 +684,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
