--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                             </ul>
 
                             <div class="nav-item">
-                           <a class="nav-link click-scroll" href=href="#version2.html">full details</a>
-        
+                           <a class="nav-link click-scroll" href="#version2.html">full details</a>
+                            </li>
     </i>
                                 </a>
                             </div>
@@ -618,6 +618,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
